tests/rascal/negative/type_errors/L1/13_expression_ES10_D4_48.ob
MODULE Test13;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               p := ((((z - 200) > (- z)) OR ((+ 200) # (1 - 0))) & (((200 - 200) + (- 1223)) >= ((1 * 0) * (200 DIV 1223))));
               y := ((((- x) * (+ 0)) + ((200 MOD 2) MOD (0 MOD 1223))) DIV (+ ((0 + 200) - (0 - 1))));
  (* error *)  q := (~ (~ ((- q) < (1223 MOD 200))));
               r := ((((z - x) - (y MOD 1223)) >= ((1 - 2) DIV (x + y))) OR (((+ 0) DIV (x + 0)) >= (+ (z * x))));
               x := ((((1 MOD z) DIV (1 MOD x)) - ((0 + x) + (- 2))) - (((1223 * 200) MOD (- 1223)) MOD (+ (200 + x))));
               z := ((+ ((- x) * (y DIV y))) + (((+ 1223) DIV (0 DIV 1223)) * ((200 MOD 1) DIV (z DIV 0))));
               y := (+ (+ ((y - y) DIV (1 MOD 1))));
               x := (+ (((1223 * 2) - (1 MOD x)) + ((- x) * (- 0))));
               p := ((((200 + 0) >= (- z)) & ((1 = 0) OR (q OR r))) OR (((y DIV 200) DIV (2 - 200)) # (- (1 MOD 2))));
               p := ((((1223 < 0) & (x = 1)) OR ((2 * 0) # (200 MOD 1223))) OR (((y >= 0) OR (1223 >= 1)) & ((y - 0) = (y DIV 1))))
END Test13.